--- a/lab-07-template.Rmd
+++ b/lab-07-template.Rmd
@@ -32,25 +32,27 @@ ggplot(evals, aes(score)) +
   geom_bar()
 ```
 
-*Add your narrative here.*
+This shows that most students rate their courses fairly well, with the distribution peaking around 4.5.
 
 ### Exercise 2
 
-```{r viz-score-bty, eval = FALSE}
+```{r viz-score-bty}
 # add the code for each plot and assign them to the names as outlined below
 # remove eval = FALSE from the code chunk options
 # knit the document, and you'll see them appear next to each other
 # this uses the patchwork package loaded above
 # learn more about patchwork at https://patchwork.data-imaginist.com/
 # it might be useful for your presentations!
-plot_geom_point  <- ggplot(___)
+plot_geom_point  <- ggplot(evals, aes(bty_avg, score)) +
+  geom_point()
 
-plot_geom_jitter <- ggplot(___)
+plot_geom_jitter <- ggplot(evals, aes(bty_avg, score)) +
+  geom_point() + geom_jitter()
 
 plot_geom_point + plot_geom_jitter
 ```
 
-*Add your narrative here.*
+In the first plot, all the points are on discrete numbers.
 
 ### Exercise 3
 
