--- a/lab-07-template.Rmd
+++ b/lab-07-template.Rmd
@@ -86,12 +86,12 @@ It is meaningful, because all points are around score 4, it is possible to rate 
 
 ### Exercise 7
 
-```{r glance-score_bty_fit, eval = FALSE}
+```{r glance-score_bty_fit}
 # remove eval = FALSE from the code chunk options after filling in the blanks
-glance(___)
+glance(score_bty_fit)
 ```
 
-*Add interpretation of R-squared here.*
+3% of the data's variability is explained by the model.
 
 ### Exercise 8
 
